增加用户登录和角色
